# vrhi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_deps.py  temp.diff  test.cpp  test_impl_backend.cpp  test_impl_buffer.cpp  test_impl_definitions.cpp  test_impl_device.cpp  test_impl_shader.cpp  test_impl_state.cpp  test_impl_texture.cpp  vdeps.py  vdeps.toml  vidl.py  vrhi.h  vrhi_defines.h  vrhi_generated.h  vrhi_impl.h  vrhi_impl_backend.h  vrhi_impl_buffer.h  vrhi_impl_common.h  vrhi_impl_device.h  vrhi_impl_shader.h  vrhi_impl_state.h  vrhi_impl_texture.h  vrhi_utils.h
include/komihash/: README.md  komihash.h
lib/win_debug/: ShaderMakeBlob.lib  slang-rt.lib
lib/win_release/: ShaderMakeBlob.lib  slang.lib
tools/linux_debug/: ShaderMake
tools/linux_release/: ShaderMake
tools/mac_debug/: ShaderMake
